精算完了に応じてリサイクラービューの色を変えるなどUIを変更した

--- a/native/android/app/src/main/res/layout/list_item_payment.xml
+++ b/native/android/app/src/main/res/layout/list_item_payment.xml
@@ -16,11 +16,15 @@
     <variable
       name="whoPaid"
       type="String" />
+    <variable
+      name="isCompleted"
+      type="Boolean" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:paymentBackColor="@{isCompleted}">
 
     <TextView
       android:id="@+id/paymentName"
