--- a/native/android/app/src/main/res/layout/fragment_payment_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_payment_detail.xml
@@ -74,7 +74,7 @@
     android:layout_marginEnd="32dp"
     android:layout_marginBottom="8dp"
     android:backgroundTint="@color/ourTheme"
-    android:text="@string/paymentCompleted"
+    android:text="@string/paymentCompleteSetting"
     android:textSize="24sp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="parent"
