--- a/native/android/app/src/main/res/layout/list_item_country.xml
+++ b/native/android/app/src/main/res/layout/list_item_country.xml
@@ -5,16 +5,15 @@
   xmlns:tools="http://schemas.android.com/tools">
   <data>
     <variable
-      name="tag"
-      type="work.calmato.prestopay.network.Tag" />
+      name="nationalFlag"
+      type="work.calmato.prestopay.network.NationalFlag" />
   </data>
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="0dp"
-    app:tagCheck="@{tag}">
+    android:layout_marginStart="0dp">
 
     <ImageView
       android:id="@+id/image"
@@ -30,7 +29,7 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       app:srcCompat="@drawable/circle_theme_color"
-      app:tagImage="@{tag}" />
+      app:countryImage="@{nationalFlag}" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
