--- a/native/android/app/src/main/res/layout/list_item_checkbox.xml
+++ b/native/android/app/src/main/res/layout/list_item_checkbox.xml
@@ -25,7 +25,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/thumbnail"
       android:layout_width="75dp"
       android:layout_height="75dp"
