--- a/native/android/app/src/main/res/layout/fragment_account_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_home.xml
@@ -13,7 +13,7 @@
       tools:layout_editor_absoluteX="0dp"
       tools:layout_editor_absoluteY="1dp">
 
-      <ImageView
+      <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/UserAccountThumnail"
         android:layout_width="78dp"
         android:layout_height="76dp"
