--- a/native/android/app/src/main/res/layout/list_item_tag.xml
+++ b/native/android/app/src/main/res/layout/list_item_tag.xml
@@ -26,7 +26,7 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
       android:id="@+id/image"
       android:layout_width="75dp"
       android:layout_height="75dp"
