--- a/native/android/app/src/main/res/layout/fragment_add_payment.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment.xml
@@ -55,6 +55,7 @@
       android:layout_marginTop="16dp"
       android:text="支払い者："
       android:textSize="18sp"
+      android:visibility="invisible"
       app:layout_constraintStart_toStartOf="@+id/paymentName"
       app:layout_constraintTop_toBottomOf="@+id/paymentName" />
 
