--- a/native/android/app/src/main/res/layout/fragment_account_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_home.xml
@@ -226,10 +226,10 @@
         app:layout_constraintTop_toBottomOf="@+id/horizonBar5" />
 
       <TextView
-        android:id="@+id/helpText"
+        android:id="@+id/groupHiddenText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/help"
+        android:text="@string/hiddenGroups"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/horizonBar6"
         app:layout_constraintStart_toStartOf="@+id/prestoPayText"
@@ -253,7 +253,7 @@
         android:text="@string/invite_prestopay"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/displayInviteButton"
-        app:layout_constraintStart_toStartOf="@+id/helpText"
+        app:layout_constraintStart_toStartOf="@+id/groupHiddenText"
         app:layout_constraintTop_toBottomOf="@+id/horizonBar6" />
 
       <TextView
