非表示グループ画面への遷移をできるようにした

--- a/native/android/app/src/main/res/layout/fragment_account_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_home.xml
@@ -112,7 +112,7 @@
         android:layout_marginEnd="16dp"
         android:background="#A4A7A7"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/displayHelpButton"
+        app:layout_constraintBottom_toBottomOf="@+id/displayHiddenGroupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
@@ -216,7 +216,7 @@
         app:layout_constraintTop_toTopOf="@+id/displayPrestoPayButton" />
 
       <Button
-        android:id="@+id/displayHelpButton"
+        android:id="@+id/displayHiddenGroupButton"
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:alpha="0.2"
