--- a/native/android/app/src/main/res/layout/fragment_group_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit.xml
@@ -111,7 +111,7 @@
       app:layout_constraintTop_toBottomOf="@+id/groupEditHorizon" />
 
     <Switch
-      android:id="@+id/switch1"
+      android:id="@+id/hiddenSwitch"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="200dp"
