--- a/native/android/app/src/main/res/layout/fragment_add_payment_step2.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step2.xml
@@ -5,28 +5,7 @@
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-      android:id="@+id/textView12"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="8dp"
-      android:text="Step2"
-      android:textSize="36sp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-      android:id="@+id/textView15"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:text="誰が支払った？"
-      android:textSize="30sp"
-      app:layout_constraintStart_toStartOf="@+id/textView12"
-      app:layout_constraintTop_toBottomOf="@+id/textView12" />
+    android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
       android:id="@+id/tab_layout"
@@ -34,16 +13,41 @@
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toTopOf="@+id/viewPager2"
       app:layout_constraintTop_toBottomOf="@+id/textView15"
+      tools:layout_editor_absoluteX="-37dp" />
+
+    <TextView
+      android:id="@+id/textView12"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Step2"
+      android:textSize="36sp"
+      app:layout_constraintBottom_toTopOf="@+id/textView15"
+      app:layout_constraintStart_toStartOf="@+id/textView15"
+      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0"
-      tools:layout_editor_absoluteX="39dp" />
+      app:layout_constraintVertical_chainStyle="packed" />
+
+    <TextView
+      android:id="@+id/textView15"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:text="誰が支払った？"
+      android:textSize="30sp"
+      app:layout_constraintBottom_toTopOf="@+id/tab_layout"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <androidx.viewpager2.widget.ViewPager2
       android:id="@+id/viewPager2"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
+      android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent" />
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
